--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
         <script src="script.js" type="text/javascript">
         </script>
     </head>
-    <body>
-        
+    <body id='main'>
+        <nav id="tribute-info">
+            <div id='nav1'>
+                <a id="tribute-link" href="/" target="_blank">
+                    <span>Apple</span>
+                </a>
+            </div>
+        </nav>
+        <div id="title">
+            <div id="title1"><a href="/" target="_blank">iPhone 13 Pro</a></div>
+            <div id="title2"><a href="/" target="_blank">Buy</a></div>
+        </div>
+        <div id="img-div">
+            <div id="img-caption">
+                <p id="img-caption1">iPhone 13 Pro</p>
+                <p id="img-caption2">Oh.So.Pro</p>
+            </div>
+            <img id="image" src="img/iphone.jpg">
+        </div>
     </body>
 </html>
