--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         </script>
     </head>
     <body>
-        
+        <div>
+            <div id="title"></div>
+            <div id="description"></div>
+            <div id="survey-form">
+                <input type="text" id="name" required>
+
+            </div>
+        </div>
     </body>
 </html>
