--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div>
+    <div id="container">
         <h1 id="title">freeCodeCamp 调查表格</h1>
         <p id="description">感谢您抽出宝贵时间帮助我们改进平台</p>
         <div id="survey-form">
