--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="form-group">
                 <p>您现在的角色是？</p>
                 <select id="dropdown" required>
+                    <option disabled selected value>选择你现在的角色</option>
                     <option>学生</option>
                     <option>全职</option>
                     <option>其它</option>
