--- a/index.html
+++ b/index.html
@@ -8,6 +8,57 @@
         </script>
     </head>
     <body>
-        
+        <header id="header">
+            <div id="header-img">
+                <img src="#" alt="页面logo">
+            </div>
+            <nav id="nav-bar">
+                <ul>
+                    <li class="nav-link">Features</li>
+                    <li class="nav-link">How It Works</li>
+                    <li class="nav-link">Pricing</li>
+                </ul>
+            </nav>
+        </header>
+        <div id="title">Handcrafted, home-made masterpieces</div>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <input id="email" type="email" placeholder="Enter your email address" required>
+            <input id="submit" type="submit" value="GET STARTED">
+        </form>
+        <div class="feature">
+            <div class="feature-1">
+                <h2>Premium Materials</h2>
+                <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+            </div>
+            <div class="feature-2">
+                <h2>Fast Shipping</h2>
+                <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+            </div>
+            <div class="feature-3">
+                <h2>Quality Assurance</h2>
+                <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+            </div>
+        </div>
+        <div class="video"></div>
+        <div class="price">
+            <div class="price-1">
+                <div class="title-1">TENOR TROMBONE</div>
+            </div>
+            <div class="price-2">
+                <div class="title-2">BASS TROMBONE</div>
+            </div>
+            <div class="price-3">
+                <div class="title-3">VALVE TROMBONE
+                </div>
+            </div>
+        </div>
+        <footer>
+            <ul>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+              <span>Copyright 2016, Original Trombones</span>
+        </footer>
     </body>
 </html>
