--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <body>
         <header id="header">
             <div id="header-img">
-                <img src="#" alt="页面logo">
+                <img src="img/logo.png" alt="页面logo">
             </div>
             <nav id="nav-bar">
                 <ul>
-                    <li class="nav-link">Features</li>
-                    <li class="nav-link">How It Works</li>
-                    <li class="nav-link">Pricing</li>
+                    <li><a class="nav-link" href="#feature">Features</a></li>
+                    <li><a class="nav-link" href="#video">How It Works</a></li>
+                    <li><a class="nav-link" href="#price">Pricing</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,7 +25,7 @@
             <input id="email" type="email" placeholder="Enter your email address" required>
             <input id="submit" type="submit" value="GET STARTED">
         </form>
-        <div class="feature">
+        <div id="feature">
             <div class="feature-1">
                 <h2>Premium Materials</h2>
                 <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
@@ -39,17 +39,40 @@
                 <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
             </div>
         </div>
-        <div class="video"></div>
-        <div class="price">
+        <iframe id="video" src="img/My sassy girl.mp4"> </iframe>
+        <div id="price">
             <div class="price-1">
                 <div class="title-1">TENOR TROMBONE</div>
+                <h2>$600</h2>
+                <ol>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum dolor.</li>
+                    <li>Lorem ipsum.</li>
+                </ol>
+                <button class="btn">SELECT</button>
             </div>
             <div class="price-2">
                 <div class="title-2">BASS TROMBONE</div>
+                <h2>$900</h2>
+                <ol>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum dolor.</li>
+                    <li>Lorem ipsum.</li>
+                </ol>
+                <button class="btn">SELECT</button>
             </div>
             <div class="price-3">
-                <div class="title-3">VALVE TROMBONE
-                </div>
+                <div class="title-3">VALVE TROMBONE</div>
+                <h2>$1200</h2>
+                <ol>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum dolor.</li>
+                    <li>Lorem ipsum.</li>
+                </ol>
+                <button class="btn">SELECT</button>
             </div>
         </div>
         <footer>
